Added a route to get all of the carpools that a user is associated with
